# basisopt

./: .gitignore  .readthedocs.yml  README.md  codecov.yml  pyproject.toml  requirements.bak  requirements.txt  setup.py
.github/workflows/: code-quality.yaml  test.yaml
basisopt/: __init__.py  api.py  basis_set_converters.py  bse_wrapper.py  containers.py  dask.yaml  data.py  molecule.py  optrecord.py  parallelise.py  prune.py  uncontract.py  util.py
basisopt/basis/: TODO.txt  __init__.py  atomic.py  basis.py  guesses.py  jkfit.py  molecular.py  zetatools.py
basisopt/opt/: __init__.py  auto_basis.py  contraction.py  eventemper.py  eventemperToBasis.py  legendre.py  legendreHybrid.py  legendreSingle.py  optimizers.py  polarisation.py  reduce.py  reduce_basis.py  strategies.py  welltemper.py
basisopt/testing/: dunham.py  rank.py  test.py
basisopt/viz/: basis.py  orbital.py
basisopt/wrappers/: dummy.py  molpro.py  orca.py  psi4.py  wrapper.py
doc/: requirements.txt
doc/src/: conf.py
examples/: default_strategy.py  ecp-energy.py  et_strategy.py  et_wt_compare.py  jkfit.py  legendre_hybrid.py  legendre_strategy.py  molecular.py  oxygen_calculation_bse_basis.py  ranking.py  reduce_strategy.py  wt_strategy.py
examples/multi-molecule/: multi_molecule.py
examples/reduce/: ne_reduce.py  viz_exponents.py
tests/: test_api.py  test_basis.py  test_basis_guess.py  test_bse_wrapper.py  test_containers.py  test_molecule.py  test_util.py  test_wrapper.py  test_zeta_tools.py
tests/data/: neon.json  shells.py
