[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basisopt"
version = "1.1.0"
license = { text = "MIT" }
description = "Automatic basis set optimization for quantum chemistry"
readme = "README.md"
authors = [
    { name = "Robert Shaw", email = "robertshaw383@gmail.com" },
    { name = "Grant Hill", email = "grant.hill@sheffield.ac.uk" },
    { name = "Shaun Donnelly", email = "s.t.donnelly@sheffield.ac.uk" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["quantum", "chemistry", "optimization", "basis sets"]
project_urls = {
    "Documentation": "https://example.com/project-docs",
    "Source Code": "https://github.com/Sheffield-Theoretical-Chemistry/basisflow"
}

[options]
python_requires = ">=3.9,<3.11"
install_requires = [
    "numpy>=1.24.2",
    "colorlog>=6.7.0",
    "scipy>=1.10.1",
    "pandas>=1.5.3",
    "monty>=2022.9.9",
    "basis-set-exchange>=0.9",
    "mendeleev>=0.9",
    "matplotlib>=3.7.1",
    "ray>=2.11.0"
]

[options.extras_require]
dev = [
    "pytest>=7.2.2",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "flake8-pyproject>=1.2.2",
    "pytest-cov>=4.0.0",
    "codecov>=2.1.12",
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0",
    "isort>=5.12.0"
]

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.flake8]
ignore = [
    "E501", "E203", "W503", "W504", "E402", "B028", "E741", "DAR402"
]
per-file-ignores = [
    "basisopt/api.py:F401"
]
max-line-length = 100
docstring_style = "google"
strictness = "long"
